# HyperQuant

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  evolution_plan.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  benchmark-protocol.md  deployment.md  evaluation.md  guarantees.md  pilot-playbook.md  problem-solution-profit.md
docs/evidence/: README.md  SHA256SUMS.txt  capacity-example.json  capacity-example.md  resident-benchmark.json  resident-benchmark.md  route-benchmark.json  route-benchmark.md
examples/: context_codec_demo.py  synthetic_demo.py  vector_codec_demo.py
hyperquant/: __init__.py  __main__.py  audit.py  benchmark.py  bundle.py  cli.py  codebook.py  codebook_codec.py  compat.py  config.py  context_codec.py  contour.py  defaults.py  guarantee.py  live_data.py  native_core.py  page_ops.py  resident_tier.py  route_benchmark.py  telemetry.py  utils.py  validation.py  vector_codec.py
hyperquant/_native/: fwht.c
hyperquant/api/: __init__.py  app.py  models.py
scripts/: build_proof_pack.py  run_demo.sh
tests/: array_builders.py  conftest.py  test_api.py  test_cli.py  test_context_codec.py  test_page_ops.py  test_resident_tier.py  test_roundtrip.py  test_vector_codec.py
