[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperquant"
version = "1.0.0"
description = "Memory-first compression and resident-memory tiering for vector and long-context ML workloads."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Satsuk Artem"}
]
keywords = ["compression", "kv-cache", "vector-search", "inference", "memory", "resident-ram", "quantization"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.26,<3",
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3",
  "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<0.29"]
release = ["build>=1.2,<2", "twine>=5,<6"]

[project.scripts]
hyperquant = "hyperquant.cli:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["hyperquant*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.package-data]
"hyperquant" = ["_native/*.c"]
